// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RbacUserForm component Should render correctly 1`] = `
<ReactFinalForm
  onSubmit={[Function]}
  render={[Function]}
  validate={[Function]}
/>
`;

exports[`RbacUserForm component Should render editing version 1`] = `
<ReactFinalForm
  initialValues={
    Object {
      "email": "email@mail.com",
      "groups": Array [
        "10000000000026",
        "10000000000016",
      ],
      "name": "User name",
      "userid": "User id",
    }
  }
  onSubmit={[Function]}
  render={[Function]}
  validate={[Function]}
/>
`;
